third attempt for the pull request

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,14 +17,14 @@ jobs:
             - name: Install dependencies
               run: npm install
 
-            - name: Linter (ESLint Fixes)
-              run: npm run lint:fix
+#            - name: Linter (ESLint Fixes)
+#              run: npm run lint:fix
 
             - name: Linter (ESLint)
               run: npm run lint
 
-            - name: Formatter (Prettier Write)
-              run: npm run prettier:write
+#            - name: Formatter (Prettier Write)
+#              run: npm run prettier:write
 
             - name: Formatter (Prettier)
               run: npm run prettier
